# nvidiot

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  main.py  nvidiot.cmd  nvidiot.spec  pyproject.toml
.github/workflows/: release.yml
api/: auth.py  models.py  routes.py  server.py  throttle.py  validate.py
nvapi/: constants.py  ffi.py  service.py  setupapi.py
tests/: test_api.py  test_ffi_init.py  test_ffi_session.py  test_service.py  test_unit.py
