[project]
name = "nvidiot"
version = "0.1.0"
description = "REST API wrapping NVIDIA Control Panel settings via NVAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["nvapi*", "api*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
