[project]
name = "nvidiot"
version = "0.1.0"
description = "REST API wrapping NVIDIA Control Panel settings via NVAPI"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["nvapi*", "api*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
