[project]
name = "nvidiot"
version = "0.1.0"
description = "REST API wrapping NVIDIA Control Panel settings via NVAPI"
requires-python = ">=3.11"
license = "MIT"
keywords = ["nvidia", "nvapi", "gpu", "driver", "drs", "rest-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["nvapi*", "api*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
